[package]
name = "jverb"
version = "0.1.0"
edition = "2021"
authors = ["JJ <jj.weber@gmail.com>"]
description = "Reverb"
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[dev-dependencies]
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc", features = ["backtrace"] }